kustomizations/auth/fusion-auth/fusionauth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fusionauth
  labels:
    app: fusionauth
    app.kubernetes.io/name: fusionauth
    app.kubernetes.io/part-of: fusionauth
spec:
  replicas: 0
  selector:
    matchLabels:
      app: fusionauth
      app.kubernetes.io/name: fusionauth
  template:
    metadata:
      labels:
        app: fusionauth
        app.kubernetes.io/name: fusionauth
        app.kubernetes.io/part-of: fusionauth
    spec:
      containers:
      - name: fusionauth
        image: fusionauth/fusionauth-app:latest
        ports:
        - containerPort: 9011
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
