kustomizations/auth/fusion-auth/opensearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      nodeSelector:
        kubernetes.io/hostname: castillo
      securityContext:
        fsGroup: 1000
      containers:
      - name: opensearch
        image: opensearchproject/opensearch:2
        ports:
        - containerPort: 9200
        - containerPort: 9600
        volumeMounts:
        - name: search-data
          mountPath: /usr/share/opensearch/data
      volumes:
      - name: search-data
        persistentVolumeClaim:
          claimName: opensearch-pvc
