kustomizations/auth/fusion-auth/database-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fusionauth-postgresql
  labels:
    app.kubernetes.io/name: fusionauth-postgresql
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app.kubernetes.io/name: fusionauth-postgresql
