kustomizations/auth/fusion-auth/fusionauth-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fusionauth
spec:
  selector:
    app: fusionauth
  ports:
  - name: web
    port: 9011
    targetPort: 9011
