kustomizations/auth/fusion-auth/opensearch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch
spec:
  selector:
    app: opensearch
  ports:
  - name: rest
    port: 9200
    targetPort: 9200
  - name: perf
    port: 9600
    targetPort: 9600
