kustomizations/auth/fusion-auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fusionauth
spec:
  rules:
  - host: fusionauth.lan
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fusionauth
              port:
                number: 9011
  - host: opensearch.lan
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: opensearch
              port:
                number: 9200
